// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/Card Default 1`] = `
.c0 {
  background-color: #fff;
  border: 1px solid #eaeaea;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  padding: 0 16px 24px;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 14px;
}

.c2 {
  font-weight: normal;
  font-size: 20px;
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h3
        className="c2"
      >
        Example card
      </h3>
      Lorem ipsum dolor sit amet.
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Image 1`] = `
.c0 {
  background-color: #fff;
  border: 1px solid #eaeaea;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  padding: 0 16px 24px;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 14px;
}

.c2 {
  font-weight: normal;
  font-size: 20px;
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <img
      alt="Dummy image"
      src="https://dummyimage.com/600x400/ccc/fff.png"
    />
    <div
      className="c1"
    >
      <h3
        className="c2"
      >
        Card with image
      </h3>
      Lorem ipsum dolor sit amet.
    </div>
  </div>
</div>
`;
